# sensable

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml
apps/forge/: package.json  vite.config.ts
apps/forge/src/: app.tsx  main.tsx
apps/forge/src-tauri/: Cargo.toml  tauri.conf.json
apps/forge/src-tauri/src/: lib.rs
apps/forge/src-tauri/src/commands/: worktree.rs
apps/forge/src/components/: chat-panel.tsx  diff-viewer.tsx  sidebar.tsx
apps/forge/src/lib/: tauri.ts
apps/forge/src/stores/: workspace-store.ts
apps/forge/src/styles/: globals.css
apps/sensable/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/sensable-mcp/: Cargo.toml
apps/sensable-mcp/src/: main.rs  server.rs
apps/sensable-mcp/src/skills/: mod.rs  ui_ux.rs
apps/sensable/src/: app.tsx
apps/sensable/src-tauri/: Cargo.toml  tauri.conf.json
apps/sensable/src-tauri/capabilities/: default.json
apps/sensable/src-tauri/icons/: icon.icns
apps/sensable/src-tauri/src/: lib.rs  main.rs  prototype.rs
apps/sensable/src-tauri/src/agent/: mod.rs  process.rs  stream.rs  types.rs
apps/sensable/src-tauri/src/approval/: mod.rs  server.rs
apps/sensable/src-tauri/src/commands/: agent.rs  mod.rs  project.rs
apps/sensable/src/components/: active-sessions-menu.tsx  agent-panel.tsx  approval-dialog.tsx  approval-toast.tsx  artifact-list.tsx  content-area.tsx  deliver-content.tsx  design-system-content.tsx  element-prompt.tsx  error-boundary.tsx  feature-stepper.tsx  inspect-toggle.tsx  markdown-renderer.tsx  mermaid-diagram.tsx  onboarding-chat.tsx  pipeline-sidebar.tsx  plan-dialog.tsx  project-picker.tsx  project-settings.tsx  project-spec-viewer.tsx  prototype-preview.tsx  spec-viewer.tsx  user-question-dialog.tsx  wireframe-preview.tsx
(+13 files in other folders)
