[package]
name = "sensable-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sensable-mcp"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
csv = "1"
