[package]
name = "sensable"
version = "0.1.0"
description = "Make it make sense"
authors = ["Christopher Augustsson"]
edition = "2021"

[lib]
name = "sensable_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tauri-plugin-notification = "2"
